<resources>
    <string name="app_name">sm_project</string>
    <string name="welcome_text">Witaj</string>
    <string name="search_hint">Wyszukaj restauracje...</string>
    <string name="category">Wybierz kategorie</string>
    <string name="category_name">Kategoria</string>
    <string name="acc_question">Nie masz jeszcze konta?</string>
    <string name="choose_restaurant">Twoje restauracje</string>
    <string name="expand_click">Rozwiń</string>


    <string name="cart_info">Twój koszyk jest pusty</string>
    <string name="summary_info">Podsumowanie</string>
    <string name="code_hint">Wpisz kod</string>
    <string name="coupon_button">Zastosuj kupon</string>
    <string name="order_summary">Podsumowanie zamówienia</string>
    <string name="amount_info">Suma</string>
    <string name="costs_info">Koszt dostawy</string>
    <string name="payment_info">Opłata serwisowa</string>
    <string name="total_costs">Łącznie</string>
    <string name="confirm_order">Potwierdź zamówienie</string>
    <string name="coupon_used">Wykorzystano kupon rabatowy</string>
    <string name="invalid_coupon">Nieprawidłowy kupon rabatowy</string>

    <string name="rating_info">47 ocen</string>
    <string name="quantity_info">Ilość</string>
    <string name="details_info">Szczegóły</string>
    <string name="add_button">Dodaj</string>

    <string name="location_info">Twoja lokalizacja</string>
    <string name="address_heading">Adres zamieszkania</string>
    <string name="address_info">Adres</string>
    <string name="city_info">Miasto</string>
    <string name="country_info">Kraj</string>
    <string name="location_search">Wyszukaj lokalizację</string>
    <string name="invalid_location">Odmowa dostępu do lokalizacji</string>

    <string name="password_hint">hasło</string>
    <string name="login_button">Zaloguj się</string>
    <string name="choose_login">lub użyj</string>
    <string name="no_account">Nie masz jeszcze konta?</string>
    <string name="register_info">Zarejestruj się</string>
    <string name="account_yes">Masz już konto?</string>
    <string name="invalid_login">Zły login lub hasło</string>
    <string name="logout_confirm">Czy na pewno chcesz się wylogować?</string>


    <string name="your_orders">Twoje zamówienia</string>


    <string name="welcome_string">Witamy w GoodFood!</string>
    <string name="welcome_description">Zamawiaj pyszne jedzenie online z różnych restauracji!</string>

    <string name="order_thanks">Dziękujemy za skorzystanie z naszych usług!</string>
    <string name="order_prepare">Twoje zamówienie jest właśnie przyrządzane.</string>
    <string name="order_received">Zamówienie otrzymane</string>

    <string name="cancel">Anuluj</string>
    <string name="order_number">Zamówienie nr </string>
    <string name="invalid_restaurant">Restauracja nie jest na Twojej liście</string>

    <string name="welcome_discount">Zniżka powitalna</string>
    <string name="discount_description">Dziękujemy za rejestrację. Otrzymujesz zniżkę 15% na pierwsze zamówienie.
        Wpisz kod: 12345 i ciesz się pysznym jedzeniem w atrakcyjnej cenie!</string>
    <string name="register_welcome">Dziękujemy za rejestrację. Otrzymujesz zniżkę 15% na pierwsze zamówienie. Wpisz kod: 12345 i
        ciesz się pysznym jedzeniem w atrakcyjnej cenie!</string>

    <string name="home_page">Strona Główna</string>
    <string name="order_page">Zamówienia</string>
    <string name="search_page">szukaj</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="settings">Ustawienia</string>
    <string name="settings_category">Zarządzaj kategoriami</string>
    <string name="settings_restaurant">Zarządzaj restauracjami</string>
    <string name="settings_dish">Zarządzaj daniami</string>
    <string name="settings_order">Zarządzaj zamówieniami</string>

    <string name="add">Dodaj</string>
    <string name="edit">Edytuj</string>
    <string name="delete">Usuń</string>

    <string name="add_category">Dodaj kategorię</string>
    <string name="add_restaurant">Dodaj restaurację</string>
    <string name="ok_button">OK</string>

    <string name="no_categories_to_edit">Brak dostępnych kategorii do edycji</string>
    <string name="choose_cat">"Wybierz kategorię do edycji"</string>
    <string name="no_categories_to_delete">Brak dostępnych kategorii do usunięcia</string>
    <string name="choose_cat_to_delete">Wybierz kategorię do usunięcia</string>
    <string name="enter_category_name">Podaj nazwę kategorii</string>
    <string name="category_already_exists">Kategoria o nazwie %1$s już istnieje</string>
    <string name="category_added">Dodano kategorię: %1$s</string>
    <string name="error_adding_category">Błąd podczas dodawania kategorii</string>
    <string name="category_updated">Zaktualizowano kategorię: %1$s</string>
    <string name="cannot_delete_category">Nie można usunąć kategorii. Istnieją powiązane restauracje.</string>
    <string name="category_deleted">Usunięto kategorię: %1$s</string>
    <string name="no_category_with_name">Brak kategorii o nazwie: %1$s</string>


    <string name="added_restaurant_to_category">Dodano restaurację %1$s do kategorii %2$s</string>
    <string name="no_restaurants_to_edit">Brak dostępnych restauracji do edycji</string>
    <string name="choose_restaurant_to_edit">Wybierz restaurację do edycji</string>
    <string name="choose_restaurant_to_delete">Wybierz restaurację do usunięcia</string>
    <string name="choose_category">Wybierz kategorię</string>
    <string name="enter_restaurant_name">Podaj nazwę restauracji</string>
    <string name="restaurant_exists">Restauracja o nazwie %1$s już istnieje</string>
    <string name="error_adding_restaurant">Błąd podczas dodawania restauracji</string>
    <string name="updated_restaurant">Zaktualizowano restaurację: %1$s</string>
    <string name="deleted_restaurant">Usunięto restaurację: %1$s</string>
    <string name="cannot_delete_restaurant">Nie można usunąć restauracji. Istnieją powiązane kategorie.</string>
    <string name="add_categories_first">Dodaj najpierw kategorie</string>
    <string name="no_restaurants_to_delete">Brak restauracji do usunięcia</string>


    <string name="select_to_delete">Wybierz zamówienie do usunięcia</string>
    <string name="no_orders_delete">Brak zamówień do usunięcia</string>
    <string name="deleted_success">Zamówienie usunięto pomyślnie</string>
    <string name="order_id">ID Zamówienia: </string>
    <string name="date">Data: </string>
    <string name="restaurant_name">Restauracja: </string>
    <string name="select_to_edit">Wybierz zamówienie do edycji</string>
    <string name="no_orders_edit">Brak dostępnych zamówień do edycji</string>
    <string name="order_updated">Zamówienie zostało pomyślnie zaktualizowane</string>
    <string name="date_info">yyyy-MM-dd</string>
    <string name="order_details_format">ID: %1$s\nData: %2$s\nKwota: %3$s\nRestauracja: %4$s\n------------------------------------</string>




    <string name="select_to_delete">Wybierz zamówienie do usunięcia</string>
    <string name="no_orders_delete">Brak zamówień do usunięcia</string>
    <string name="deleted_success">Zamówienie usunięto pomyślnie</string>
    <string name="order_id">ID Zamówienia: </string>
    <string name="date">Data: </string>
    <string name="restaurant_name">Restauracja: </string>
    <string name="select_to_edit">Wybierz zamówienie do edycji</string>
    <string name="no_orders_edit">Brak dostępnych zamówień do edycji</string>
    <string name="order_updated">Zamówienie zostało pomyślnie zaktualizowane</string>
    <string name="date_info">yyyy-MM-dd</string>
















</resources>