<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_background">

    <ScrollView
        android:id="@+id/scrollViewCart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="match_parent"
            android:layout_height="184dp"
            app:srcCompat="@drawable/food" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cherry_cream_soda"
                android:text="Good"
                android:textSize="34sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cherry_cream_soda"
                android:text="Food"
                android:textSize="34sp"
                android:textStyle="bold" />

        </LinearLayout>

        <EditText
            android:id="@+id/loginText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/edittext_background"
            android:ems="10"
            android:hint="login"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="15dp"
            android:textAlignment="center"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/passwordText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/edittext_background"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="15dp"
            android:textAlignment="center"
            android:textSize="22sp" />

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="311dp"
            android:layout_height="57dp"
            android:layout_marginTop="32dp"
            android:backgroundTint="#03A9F4"
            android:letterSpacing="0.2"
            android:text="@string/login_button"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.93"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <View
                android:id="@+id/view3"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:background="@color/blue_grey" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/choose_login"
                android:textSize="18sp" />

            <View
                android:id="@+id/view4"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:background="@color/blue_grey" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="30dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/facebook" />

            <ImageView
                android:id="@+id/googleIcon"
                android:layout_width="30dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/google" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"

            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_account"
                android:textSize="20sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/registerLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_info"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>


    </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>